# relic

./: CMakeLists.txt  main.c
include/: core.h  graphics.h
source/: core.c  graphics.c
